# CALCULATION_OF_NUMBER_PI

./: ANTI-CAPITALIST SOFTWARE LICENSE (v 1.4)  CMakeLists.txt  Calculation_of_Pi_in_Python.ipynb  Command Lines - cruncher.txt  Explanation_of_Formulas.md  FINAL-CODE.cpp  FINAL-PI.cpp  Final-C++-Source-Code.txt  Pi.cpp  Pi_Autorunner.ipynb  Pi_Hybrid.ipynb  README.md  Read Me.txt  Square_Calculation.ipynb  Square_Root_Calculation.ipynb  bbp_spotcheck.cpp  bbp_spotcheck.h  big-pi-install.bat  big-pi-install.sh  big-pi.py  bigint_rns.cpp  bigint_rns.h  bs_chudnovsky.cpp  bs_chudnovsky.h  calculation of number pi - c++.bat  calculation of number pi.bat  chudnovsky.cpp  chudnovsky.h  chudnovsky_gpu.cu  chudnovsky_terms.cu  compile_pi_calculator.sh  convolution_cpu_ntt.cpp  convolution_cpu_ntt.h  decimal-pi.py  error.cpp  far_memory.cpp  far_memory.h  fibonaci.bat  fibonaci.ipynb  fibonaci.py  (+48 more)
